Добавление работы с попапами, разметки некоторых страниц и некоторых форм. Немного стилей Нужно: 1. Сделать старницу поста(может быть стоит использовать один компонент и выражения от контейнера) 2. Сделать страницу с контактами 3. Заполнить главную страницу 4. Сделать страницу с формой для размещения благлодарности

--- a/src/index.css
+++ b/src/index.css
@@ -12,3 +12,19 @@
 
 	clip: rect(0, 0, 0, 0);
 }
+*,
+*::before,
+*::after {
+	box-sizing: border-box;
+}
+
+body {
+	padding: 0;
+	margin: 0;
+
+	width: 100vw;
+	height: 100vh;
+
+	background-image: linear-gradient(116deg, #f5c211, #c01c28);
+	background-repeat: no-repeat;
+}
