--- a/src/components/Collage/Collage.module.css
+++ b/src/components/Collage/Collage.module.css
@@ -1,7 +1,11 @@
 .collage {
 	display: grid;
 
-	grid-template-columns: repeat(5, calc(100% / 15));
+	--column-count: 7;
+	--size: calc(100% / var(--column-count));
+
+	grid-template-columns: repeat(var(--column-count), var(--size));
+	grid-template-rows: repeat(auto, var(--size));
 }
 
 .link {
@@ -15,6 +19,7 @@
 
 .picture {
 	width: 100%;
+	height: 100%;
 }
 
 .link:hover {
