--- a/src/index.css
+++ b/src/index.css
@@ -22,9 +22,13 @@ body {
 	padding: 0;
 	margin: 0;
 
-	width: 100vw;
+	width: 100%;
 	height: 100vh;
 
-	background-image: linear-gradient(116deg, #f5c211, #c01c28);
+	background-image: linear-gradient(135deg, #e233ff, #ff6800);
 	background-repeat: no-repeat;
+}
+
+#root {
+	height: 100%;
 }
