--- a/src/index.css
+++ b/src/index.css
@@ -23,7 +23,7 @@ body {
 	margin: 0;
 
 	width: 100%;
-	height: 100vh;
+  min-height: 100vh;
 
 	background-image: linear-gradient(135deg, #e233ff, #ff6800);
 	background-repeat: no-repeat;
